--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -203,4 +203,8 @@
 			transform: translate( 0, 0 );
 		}
 	}
+
+	.suki-icon {
+		vertical-align: top;
+	}
 }
